public class Square extends Rectangle {

    public Square() {
        this(0);
    }

    public Square(double length) {
        super(length, length);
    }
}
